<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2"
    tools:context=".DaftarActivity2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/txt_daftar"
        android:textSize="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="45dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/txt_daftar"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:ems="15"
        android:background="@drawable/custom_input"
        android:hint="@string/txt_hint_email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:drawablePadding="12dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="252dp"
        android:ems="15"
        android:background="@drawable/custom_input"
        android:hint="@string/txt_hint_email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="@string/txt_login"
        android:textSize="15dp"
        android:layout_below="@+id/password"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:onClick="Login"/>






</RelativeLayout>