<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_buat_login"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logobuku"
        android:layout_marginTop="220dp" />
    <TextView
        android:id="@+id/txt_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selamat Datang"
        android:textSize="40sp"
        android:layout_marginTop="140dp"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Silahkan Login Terlebih Dahulu"
        android:textSize="17dp"
        android:layout_below="@+id/txt_top"
        android:layout_marginTop="160dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_below="@+id/txt_top"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="45dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pp_pp"
        android:layout_below="@id/txt_email"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="5dp"
        android:hint="@string/txt_hint_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="45dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pp_pp"
        android:layout_below="@id/txt_password"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="5dp"
        android:hint="@string/txt_hint_password"
        android:inputType="textPassword" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_belum_punya_akun"
        android:textSize="17dp"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="35dp"
        android:id="@+id/text_belum_punya_akun"/>

    <TextView
        android:id="@+id/txt_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_bottom"
        android:textColor="#03A9F4"
        android:textSize="17dp"
        android:textStyle="bold"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="185dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="7dp" />

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grup"
        android:layout_below="@id/text_belum_punya_akun"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="Login"
        android:id="@+id/btn_loggin"/>



</RelativeLayout>